new scripts, support for vpred training

--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -63,6 +63,8 @@
         "from time import time\n",
         "from IPython.display import Markdown, display\n",
         "import time\n",
+        "from huggingface_hub.utils import disable_progress_bars\n",
+        "import logging\n",
         "\n",
         "\n",
         "#auto off by ZeroProtecPlus https://github.com/ZeroProtecPlus\n",
@@ -94,8 +96,9 @@
         "  override_config_file = None\n",
         "\n",
         "COLAB = True\n",
-        "SOURCE = \"https://github.com/qaneel/kohya-trainer\"\n",
+        "SOURCE = \"https://github.com/uYouUs/sd-scripts\"\n",
         "COMMIT = None\n",
+        "BRANCH = None\n",
         "BETTER_EPOCH_NAMES = True\n",
         "LOAD_TRUNCATED_IMAGES = True\n",
         "try:\n",
@@ -112,33 +115,27 @@
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
-        "training_model = \"Illustrious_2.0\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\"]\n",
+        "training_model = \"Illustrious_2.0\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAIXL0_75vpred\",\"NoobAIXL_05vpred\"]\n",
         "optional_custom_training_model_url = \"\" #@param {type:\"string\"}\n",
-        "#@markdown El uso de un modelo en diffusers utiliza menos recursos. Las opciones anteriores funcionarán con o sin diffusers.\n",
+        "#@markdown El uso de un modelo en diffusers utiliza menos recursos. obligatorio en colab gratis.\n",
         "load_diffusers = True #@param {type:\"boolean\"}\n",
+        "#@markdown Marcalo solo si el modelo de entrenamiento soporta vpred.\n",
+        "vpred = False # @param {\"type\":\"boolean\"}\n",
         "#@markdown Utilice wandb si desea visualizar el progreso de su entrenamiento a lo largo del tiempo.\n",
         "wandb_key = \"\" #@param {type:\"string\"}\n",
         "\n",
         "if optional_custom_training_model_url:\n",
         "  model_url = optional_custom_training_model_url\n",
+        "  model_url = model_url.strip()\n",
         "elif \"Pony\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/WhiteAiZ/Pony_diffusion_v6_diffusers_fp16\"\n",
-        "  else:\n",
-        "    model_url = \"https://huggingface.co/WhiteAiZ/PonyXL/resolve/main/PonyDiffusionV6XL.safetensors\"\n",
-        "  model_file = \"/content/ponyDiffusionV6XL.safetensors\"\n",
         "elif \"Animagine\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/cagliostrolab/animagine-xl-3.0\"\n",
-        "  else:\n",
-        "    model_url = \"https://civitai.com/api/download/models/293564\"\n",
-        "  model_file = \"/content/animagineXLV3.safetensors\"\n",
         "elif \"animagine_4.0_zero\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/cagliostrolab/animagine-xl-4.0-zero\"\n",
-        "  else:\n",
-        "    model_url = \"https://huggingface.co/cagliostrolab/animagine-xl-4.0-zero/resolve/main/animagine-xl-4.0-zero.safetensors\"\n",
-        "  model_file = \"/content/animagine-xl-4.0-zero.safetensors\"\n",
         "elif \"Illustrious_0.1\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/OnomaAIResearch/Illustrious-xl-early-release-v0\"\n",
@@ -147,30 +144,23 @@
         "elif \"Illustrious_2.0\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious_2.0\"\n",
-        "  else:\n",
-        "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious_2.0/resolve/main/illustriousXL20_v20.safetensors\"\n",
-        "  model_file = \"/content/illustriousXL20_v20.safetensors\"\n",
         "elif \"NoobAI-XL0.75\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.75\"\n",
-        "  else:\n",
-        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.75/resolve/main/NoobAI-XL-v0.75.safetensors\"\n",
         "elif \"NoobAI-XL0.5\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.5\"\n",
-        "  else:\n",
-        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.5/resolve/main/NoobAI-XL-v0.5.safetensors\"\n",
-        "else:\n",
+        "elif \"Stable Diffusion XL 1.0 base\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/\"\n",
-        "  else:\n",
-        "    model_url = \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_base_1.0.safetensors\"\n",
-        "\n",
+        "elif \"NoobAIXL0_75vpred\" in training_model:\n",
+        "  vpred = True\n",
         "  if load_diffusers:\n",
-        "    model_url = \"https://huggingface.co/stablediffusionapi/pony-realism\"\n",
-        "  else:\n",
-        "    model_url = \"https://huggingface.co/LyliaEngine/ponyRealism_v21MainVAE/resolve/main/ponyRealism_v21MainVAE.safetensors\"\n",
-        "  model_file = \"/content/ponyrealism.safetensors\"\n",
+        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-Vpred-0.75\"\n",
+        "else:\n",
+        "  vpred = True\n",
+        "  if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/noobai-xl-vpred-v0.5_diffusers\"\n",
         "\n",
         "if load_diffusers:\n",
         "  vae_file= \"stabilityai/sdxl-vae\"\n",
@@ -214,14 +204,14 @@
         "unet_lr = 3e-4 #@param {type:\"number\"}\n",
         "text_encoder_lr = 6e-5 #@param {type:\"number\"}\n",
         "#@markdown El scheduler es el algoritmo que guía la tasa de aprendizaje. Si no está seguro, elije \"constant\" e ignore el número. Personalmente recomiendo `cosine_with_restarts` con 3 reinicios.\n",
-        "lr_scheduler = \"constant_with_warmup\" #@param [\"constant\", \"cosine\", \"cosine_with_restarts\", \"constant_with_warmup\", \"linear\", \"polynomial\"]\n",
-        "lr_scheduler_number = 0 #@param {type:\"number\"}\n",
+        "lr_scheduler = \"cosine_with_restarts\" #@param [\"constant\", \"cosine\", \"cosine_with_restarts\", \"constant_with_warmup\", \"linear\", \"polynomial\"]\n",
+        "lr_scheduler_number = 3 #@param {type:\"number\"}\n",
         "#@markdown Pasos dedicados a \"calentar\" la tasa de aprendizaje durante la capacitación para lograr eficiencia. Recomiendo dejarlo al 5%.\n",
         "lr_warmup_ratio = 0.05 #@param {type:\"slider\", min:0.0, max:0.2, step:0.01}\n",
-        "lr_warmup_steps = 100 #@param {type:\"number\"}\n",
+        "lr_warmup_steps = 0 #@param {type:\"number\"}\n",
         "#@markdown Ajusta la pérdida a lo largo del tiempo y hace que el aprendizaje sea mucho más eficiente. El documento recomienda 5.0, yo recomiendo 8.0 para anime. Un valor más alto lo hace menos estricto. Establezca en 0 para desactivar.\n",
         "min_snr_gamma = 8.0 #@param {type:\"slider\", min:4.0, max:16.0, step:0.5}\n",
-        "#@markdown Multinoise puede ayudar con el equilibrio del color (negros más oscuros, blancos más claros). Pero puede dañar la generación de ojos, usalo solo si es necesario.\n",
+        "#@markdown Multinoise puede ayudar con el equilibrio del color (negros más oscuros, blancos más claros). Pero puede dañar la generación de ojos, usalo solo si es necesario. No es necesario activar si se entrena modelo Vpred.\n",
         "multinoise = False #@param {type:\"boolean\"}\n",
         "\n",
         "#@markdown ### ▶️ Structure\n",
@@ -255,9 +245,9 @@
         "#@markdown Un tamaño de lote más alto suele ser más rápido pero utiliza más memoria.\n",
         "train_batch_size = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "#@markdown No he encontrado ninguna diferencia sustancial entre sdpa y xformers.\n",
-        "cross_attention = \"sdpa\" #@param [\"sdpa\", \"xformers\"]\n",
-        "#@markdown Si estás en un A100 debes habilitar bf16 (solo colab pro).\n",
-        "mixed_precision = \"fp16\" #@param [\"bf16\", \"fp16\"]\n",
+        "cross_attention = \"xformers\" #@param [\"sdpa\", \"xformers\"]\n",
+        "#@markdown `bf16` solo funcionara en colab pro (con la GPU A100). `full fp16` usa menos vram puede ser útil si usas muchos pasos.\n",
+        "mixed_precision = \"fp16\" # @param [\"bf16\",\"fp16\",\"full_fp16\"]\n",
         "#@markdown El almacenamiento en caché latente en drive agregará un archivo de 250 KB junto a cada imagen, pero usará considerablemente menos memoria.\n",
         "cache_latents = True #@param {type:\"boolean\"}\n",
         "cache_latents_to_drive = True #@param {type:\"boolean\"}\n",
@@ -265,13 +255,14 @@
         "cache_text_encoder_outputs  = False  # @param {type:\"boolean\"}\n",
         "\n",
         "#@markdown ### ▶️ Advanced\n",
-        "#@markdown El optimizador es el algoritmo utilizado para el entrenamiento. AdaFactor es el predeterminado y funciona muy bien, mientras que Prodigy administra la tasa de aprendizaje automáticamente y puede tener varias ventajas, como entrenar más rápido debido a que necesita menos pasos, así como trabajar mejor para conjuntos de datos pequeños.\n",
-        "optimizer = \"AdaFactor\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\"]\n",
+        "#@markdown El optimizador es el algoritmo utilizado para el entrenamiento. `AdamW8bit` es el predeterminado y funciona muy bien, mientras que `Prodigy` administra la tasa de aprendizaje automáticamente y puede tener varias ventajas, como entrenar más rápido debido a que necesita menos pasos, así como trabajar mejor para conjuntos de datos pequeños.\n",
+        "#@markdown para entrenamiento de `PonyV6` recomiendo usar `Adafactor`. Mientras que `Illustrious` Funciona mejor con `AdamW8bit`\n",
+        "optimizer = \"AdamW8bit\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\"]\n",
         "#@markdown Argumentos recomendados para AdamW8bit: `weight_decay=0.1 betas=[0.9,0.99]`<p>\n",
         "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=2 use_bias_correction=True safeguard_warmup=True`<p>\n",
         "#@markdown Argumentos recomendados para Adafactor: `scale_parameter=False relative_step=False warmup_init=False`\n",
         "#markdown Recommended args for CAME: `weight_decay=0.04`\n",
-        "optimizer_args = \"scale_parameter=False relative_step=False warmup_init=False\" #@param {type:\"string\"}\n",
+        "optimizer_args = \"weight_decay=0.1 betas=[0.9,0.99]\" #@param {type:\"string\"}\n",
         "optimizer_args = [a.strip() for a in optimizer_args.split(' ') if a]\n",
         "#@markdown Si se selecciona Dadapt o Prodigy y se marca la casilla recomendada, los siguientes valores recomendados anularán cualquier configuración anterior:<p>\n",
         "#markdown `unet_lr=0.75`, `text_encoder_lr=0.75`, `network_alpha=network_dim`<p>\n",
@@ -327,34 +318,33 @@
         "accelerate_config_file = os.path.join(repo_dir, \"accelerate_config/config.yaml\")\n",
         "\n",
         "def install_dependencies():\n",
-        "  !pip install uv\n",
-        "  !uv venv kohya_trainer\n",
+        "  if 'installed' not in globals():\n",
+        "    !wget https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
+        "    installed = True\n",
+        "  print(\"Instalando entrenador\")\n",
         "  os.chdir(root_dir)\n",
         "  !git clone {SOURCE} {repo_dir}\n",
         "  os.chdir(repo_dir)\n",
+        "  if BRANCH:\n",
+        "    !git checkout {BRANCH}\n",
         "  if COMMIT:\n",
         "    !git reset --hard {COMMIT}\n",
-        "  !wget https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/train_network_xl_wrapper.py -q -O train_network_xl_wrapper.py\n",
-        "  !wget https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/dracula.py -q -O dracula.py\n",
+        "  !wget https://raw.githubusercontent.com/uYouUs/kohya-colab/main/train_network_xl_wrapper.py -q -O train_network_xl_wrapper.py\n",
+        "  !wget https://raw.githubusercontent.com//uYouUs/kohya-colab/main/dracula.py -q -O dracula.py\n",
+        "  !pip install uv\n",
+        "  !uv venv\n",
+        "  !uv pip install aria2 -q\n",
         "\n",
-        "  !wget https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
         "\n",
-        "#  !apt -y update -qq\n",
-        "#  !apt -y install aria2 -qq\n",
-        "  print(\"\\033[93mInstalando dependencias...\\033[0m\")\n",
-        "  print(\"\\033[93mPor favor espere...\\033[0m\")\n",
-        "  !uv pip install transformers==4.30.2 diffusers==0.18.2 numpy==1.26.4 -q\n",
-        "  !uv pip install bitsandbytes==0.45.1 flax==0.7.5 jax==0.4.23 jaxlib==0.4.23 -q\n",
-        "  !uv pip install pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 -q\n",
-        "  !uv pip install safetensors pygments huggingface-hub==0.25.0 wandb invisible-watermark==0.2.0 open-clip-torch==2.20.0 -q\n",
-        "  !uv pip install dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2 -q\n",
-        "  !uv pip install torch==2.5.1 torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html -q\n",
-        "  !pip install -e .\n",
+        "  !uv pip install accelerate==1.2.1 opencv-python==4.10.0.84 einops==0.8.0 --no-progress\n",
+        "  !uv pip install bitsandbytes==0.45.1 pytorch-lightning==1.9.0 voluptuous==0.13.1 --no-progress\n",
+        "  !uv pip install invisible-watermark==0.2.0 prodigyopt==1.0.0 --no-progress\n",
+        "  !uv pip install dadaptation==3.1 lion-pytorch==0.1.2 ftfy==6.1.1 --no-progress\n",
+        "  !uv pip install torch==2.5.1 torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html -no-progress\n",
+        "  !uv pip install toml==0.10.2 safetensors pygments wandb imagesize==1.4.1 --no-progress\n",
+        "  !uv pip install -e . --no-progress\n",
         "  if cross_attention == \"xformers\":\n",
-        "    !uv pip install xformers -q\n",
-        "  if \"CAME\" in optimizer:\n",
-        "    !uv pip install came-pytorch\n",
-        "    !wget https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/train_util.py -q -O library/train_util.py\n",
+        "    !uv pip install -q xformers==0.0.29.post3 --no-progress\n",
         "\n",
         "  # patch kohya for minor stuff\n",
         "  if LOWRAM:\n",
@@ -497,8 +487,9 @@
         "        \"gradient_accumulation_steps\": 1,\n",
         "        \"max_data_loader_n_workers\": 8,\n",
         "        \"persistent_data_loader_workers\": True,\n",
-        "        \"mixed_precision\": mixed_precision,\n",
+        "        \"mixed_precision\": \"fp16\" if mixed_precision == \"full_fp16\" else mixed_precision,\n",
         "        \"full_bf16\": mixed_precision == \"bf16\",\n",
+        "        \"full_fp16\": mixed_precision == \"full_fp16\",\n",
         "        \"cache_latents\": cache_latents,\n",
         "        \"cache_latents_to_disk\": cache_latents_to_drive,\n",
         "        \"cache_text_encoder_outputs\": cache_text_encoder_outputs,\n",
@@ -507,6 +498,9 @@
         "        \"prior_loss_weight\": 1.0,\n",
         "        \"multires_noise_iterations\": 6 if multinoise else None,\n",
         "        \"multires_noise_discount\": 0.3 if multinoise else None,\n",
+        "        \"v_parameterization\": vpred,\n",
+        "        \"scale_v_pred_loss_like_noise_pred\": vpred,\n",
+        "        \"zero_terminal_snr\": vpred,\n",
         "      },\n",
         "      \"saving_arguments\": {\n",
         "        \"save_precision\": \"fp16\",\n",
@@ -595,6 +589,15 @@
         "\n",
         "  else:\n",
         "    # Downloadable model\n",
+        "\n",
+        "    # log minimo\n",
+        "    logging.getLogger(\"huggingface_hub\").setLevel(logging.ERROR)\n",
+        "    logging.getLogger(\"fsspec\").setLevel(logging.ERROR)\n",
+        "\n",
+        "    # Desactiva las barras de progreso\n",
+        "    os.environ[\"HF_HUB_DISABLE_PROGRESS_BARS\"] = \"1\"\n",
+        "    disable_progress_bars()\n",
+        "\n",
         "    if load_diffusers:\n",
         "      if 'huggingface.co' in real_model_url:\n",
         "          match = re.search(r'huggingface\\.co/([^/]+)/([^/]+)', real_model_url)\n",
