replace noobai 0.5 with rouwei 0.8 vpred

--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -115,7 +115,7 @@
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
-        "training_model = \"Illustrious_2.0\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAIXL0_75vpred\",\"NoobAIXL_05vpred\"]\n",
+        "training_model = \"Illustrious_2.0\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAIXL0_75vpred\",\"RouWei_v080vpred\"]\n",
         "optional_custom_training_model_url = \"\" #@param {type:\"string\"}\n",
         "#@markdown El uso de un modelo en diffusers utiliza menos recursos. obligatorio en colab gratis.\n",
         "load_diffusers = True #@param {type:\"boolean\"}\n",
@@ -160,7 +160,7 @@
         "else:\n",
         "  vpred = True\n",
         "  if load_diffusers:\n",
-        "    model_url = \"https://huggingface.co/WhiteAiZ/noobai-xl-vpred-v0.5_diffusers\"\n",
+        "    model_url = \"https://huggingface.co/John6666/rouwei-v080-vpred-sdxl\"\n",
         "\n",
         "if load_diffusers:\n",
         "  vae_file= \"stabilityai/sdxl-vae\"\n",
