replace noobai 0.5 vpred with rouwei 0.8 vpred

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -110,11 +110,11 @@
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
-        "training_model = \"Illustrious_2.0\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAIXL0_75vpred\",\"NoobAIXL_05vpred\"]\n",
+        "training_model = \"Illustrious_2.0\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAIXL0_75vpred\",\"RouWei_v080vpred\"]\n",
         "optional_custom_training_model = \"\" #@param {type:\"string\"}\n",
         "#@markdown Esto forzara el uso del modelo en formato diffusers, puede ser util en ciertos casos. <p>\n",
         "#@markdown Manten esto desmarcado para usar un modelo ckpt (.safetensors) para el entrenamiento.\n",
-        "force_load_diffusers = False # @param {\"type\":\"boolean\"}\n",
+        "force_load_diffusers = True # @param {\"type\":\"boolean\"}\n",
         "#@markdown Marca está opción si el modelo custom esta en dicho formato\n",
         "custom_model_is_diffusers = False #@param {type:\"boolean\"}\n",
         "#@markdown Marca esta opción si tu modelo soporta vpred de lo contrario dejala desmarcada.\n",
@@ -182,10 +182,10 @@
         "else:\n",
         "  vpred = True\n",
         "  if load_diffusers:\n",
-        "    model_url = \"https://huggingface.co/WhiteAiZ/noobai-xl-vpred-v0.5_diffusers\"\n",
+        "    model_url = \"https://huggingface.co/John6666/rouwei-v080-vpred-sdxl\"\n",
         "  else:\n",
-        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-Vpred-0.5/resolve/main/noobai-xl-vpred-v0.5.safetensors\"\n",
-        "  model_file = \"/content/noobai-xl-vpred-v0.5.safetensors\"\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/RouWei/resolve/main/rouwei_v080Vpred.safetensors\"\n",
+        "  model_file = \"/content/rouwei_v080Vpred.safetensors\"\n",
         "\n",
         "if load_diffusers:\n",
         "  vae_file= \"stabilityai/sdxl-vae\"\n",
@@ -375,7 +375,7 @@
         "\n",
         "def install_trainer():\n",
         "  if 'installed' not in globals():\n",
-        "    !wget https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
+        "    !wget -q -c --show-progress https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
         "    installed = True\n",
         "\n",
         "  #Uv package manager add-on ZeroProtecPlus\n",
