--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -42,10 +42,10 @@
         "id": "dPQlB4djNm3C"
       },
       "source": [
-        "| |GitHub|Trainer XL|Tagger WDV2|Tagger WDV3||Old Trainer XL|\n",
-        "|:--|:-:|:-:|:-:||:-:|:-:|\n",
-        "| 🏠 **Original Proyect** |[![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/hollowstrawberry/kohya-colab) | |\n",
-        "|**Modified By WhiteZ**| [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/gwhitez/Lora-Trainer-XL) |   [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Fix_Lora_Trainer_XL.ipynb) |[![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Dataset_Maker_By_WhiteZ.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Waifu_Diffusion_V3_Dataser_Maker.ipynb) |  |[![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Old_Fix_Lora_Trainer_XL.ipynb)\n"
+        "| | GitHub | Trainer XL | Tagger WDV3 (kohya)  | Tagger WDV3 | Old Trainer XL |\n",
+        "| :--- | :--- | :--- | :--- | :--- | :---|\n",
+        "| 🏠 **Original Proyect** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/hollowstrawberry/kohya-colab) | | | | |\n",
+        "| **Modified By WhiteZ** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/gwhitez/Lora-Trainer-XL) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Fix_Lora_Trainer_XL.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Dataset_Maker_By_WhiteZ.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Waifu_Diffusion_V3_Dataser_Maker.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Old_Fix_Lora_Trainer_XL.ipynb) |"
       ]
     },
     {
@@ -114,7 +114,7 @@
         "optional_custom_training_model = \"\" #@param {type:\"string\"}\n",
         "#@markdown Esto forzara el uso del modelo en formato diffusers, puede ser util en ciertos casos. <p>\n",
         "#@markdown Manten esto desmarcado para usar un modelo ckpt (.safetensors) para el entrenamiento.\n",
-        "force_load_diffusers = True # @param {\"type\":\"boolean\"}\n",
+        "force_load_diffusers = False # @param {\"type\":\"boolean\"}\n",
         "#@markdown Marca está opción si el modelo custom esta en dicho formato\n",
         "custom_model_is_diffusers = False #@param {type:\"boolean\"}\n",
         "#@markdown Marca esta opción si tu modelo soporta vpred de lo contrario dejala desmarcada.\n",
