change to locon-Lycoris

--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -68,7 +68,7 @@
         "#@markdown ### 💤 Auto Off\n",
         "\n",
         "#@markdown *Si esta opción está marcada, el entorno se desconectará automáticamente una vez finalice el entrenamiento.*\n",
-        "auto_off   = True  # @param {type: \"boolean\"}\n",
+        "auto_off   = False  # @param {type: \"boolean\"}\n",
         "if auto_off:\n",
         "    print(\"\\033[96mAuto Off encendido\\033[0m\")\n",
         "if not auto_off:\n",
@@ -227,7 +227,8 @@
         "network_module = \"networks.lora\"\n",
         "network_args = None\n",
         "if lora_type.lower() == \"locon\":\n",
-        "  network_args = [f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
+        "    network_module = \"lycoris.kohya\"\n",
+        "    network_args = [f\"algo=locon\", f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
         "\n",
         "#@markdown ### ▶️ Entrenamiento\n",
         "#@markdown Ajusta estos parámetros según tu configuración de colab.\n",
@@ -241,7 +242,7 @@
         "mixed_precision = \"fp16\" #@param [\"bf16\", \"fp16\", \"full_fp16\"]\n",
         "#@markdown `cache_latents_to_drive` agregará un archivo de 250 KB junto a cada imagen, pero utilizará considerablemente menos memoria.\n",
         "cache_latents = True #@param {type:\"boolean\"}\n",
-        "cache_latents_to_drive = True #@param {type:\"boolean\"}\n",
+        "cache_latents_to_drive = False #@param {type:\"boolean\"}\n",
         "#@markdown La siguiente opción desactivará el mezclado de etiquetas `shuffle_tags` y deshabilitará el entrenamiento del codificador de texto.\n",
         "cache_text_encoder_outputs  = False  # @param {type:\"boolean\"}\n",
         "\n",
@@ -324,7 +325,7 @@
         "  !pip install uv\n",
         "  #!pip install accelerate==1.2.1 opencv-python==4.10.0.84 einops==0.8.0 \\ #debug, slows down startup if active\n",
         "  !uv pip install bitsandbytes==0.45.1 pytorch-lightning==1.9.0 voluptuous==0.13.1 \\\n",
-        "    invisible-watermark==0.2.0 prodigyopt==1.0.0 \\\n",
+        "    invisible-watermark==0.2.0 prodigyopt==1.0.0 lycoris-lora \\\n",
         "    dadaptation==3.1 lion-pytorch==0.1.2 ftfy==6.1.1 --no-progress\n",
         "    # toml==0.10.2 safetensors pygments wandb imagesize==1.4.1 #debug\n",
         "  !uv pip install -e . --no-progress\n",
