change to locon-Lycoris

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -245,7 +245,7 @@
         "\n",
         "#@markdown ### ▶️ Structure\n",
         "#@markdown LoRA es del tipo clásico y bueno para una variedad de propósitos. LoCon es bueno con los estilos artísticos (también funciona con personajes) ya que tiene más capas para aprender más aspectos del conjunto de datos.\n",
-        "lora_type = \"LoRA\" # @param [\"LoRA\",\"LoCon\"]\n",
+        "lora_type = \"LoCon\" # @param [\"LoRA\",\"LoCon\"]\n",
         "\n",
         "#@markdown A continuación se muestran algunos valores XL recomendados para las siguientes configuraciones:\n",
         "\n",
@@ -265,7 +265,8 @@
         "network_module = \"networks.lora\"\n",
         "network_args = None\n",
         "if lora_type.lower() == \"locon\":\n",
-        "  network_args = [f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
+        "    network_module = \"lycoris.kohya\"\n",
+        "    network_args = [f\"algo=locon\", f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
         "\n",
         "#@markdown ### ▶️ Training\n",
         "#@markdown Ajuste estos parámetros según la configuración de su colab.\n",
@@ -379,7 +380,7 @@
         "    installed = True\n",
         "\n",
         "  #Uv package manager add-on ZeroProtecPlus\n",
-        "  !git clone -b dev https://github.com/ZeroProtecPlus/LoRA_Easy_Training_scripts_Backend {trainer_dir}\n",
+        "  !git clone -b dev https://github.com/gwhitez/LoRA_Easy_Training_scripts_Backend.git {trainer_dir}\n",
         "  os.chdir(trainer_dir)\n",
         "  #!git reset --hard {COMMIT}\n",
         "\n",
