reverse change of lycoris locon

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -52,7 +52,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "AT1WRbhiHRCJ"
       },
       "outputs": [],
@@ -265,8 +264,7 @@
         "network_module = \"networks.lora\"\n",
         "network_args = None\n",
         "if lora_type.lower() == \"locon\":\n",
-        "    network_module = \"lycoris.kohya\"\n",
-        "    network_args = [f\"algo=locon\", f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
+        "  network_args = [f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
         "\n",
         "#@markdown ### ▶️ Training\n",
         "#@markdown Ajuste estos parámetros según la configuración de su colab.\n",
