--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -52,7 +52,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "AT1WRbhiHRCJ"
+        "id": "AT1WRbhiHRCJ",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
