--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -615,7 +615,7 @@
         "\n",
         "def getModel():\n",
         "  global diffusers_model, model_url, model_file, old_model_url\n",
-        "  #!pip install transformers==4.47.1 diffusers==0.32.2 jax==0.4.33 jaxlib==0.4.33 huggingface_hub==0.27.1 flax==0.10.2\n",
+        "  !uv pip install transformers==4.47.1 #diffusers==0.32.2 jax==0.4.33 jaxlib==0.4.33 huggingface_hub==0.27.1 flax==0.10.2\n",
         "  from huggingface_hub import snapshot_download\n",
         "  from huggingface_hub.utils import disable_progress_bars\n",
         "  disable_progress_bars() # Disable model download progress bars to clean up output from threading mess\n",
